# raven-command-core

./: RAVEN_ONE_MASTER_PLAN.md  package.json
.github/workflows/: build-rah-desktop-bridge-windows.yml  release-desktop-bridge-dev.yml  release-desktop-bridge-prod.yml
.lovable/: plan.md
desktop-bridge/: .env.example  README-FIRST.txt  Start RAH Desktop Bridge.cmd  Start RAH Workspace.cmd  install.ps1  package.json  status.cmd  stop.cmd  uninstall.ps1
desktop-bridge-native/: .gitignore  README.md  package-sidecar.mjs
desktop-bridge-native/src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.template.json
desktop-bridge-native/src-tauri/capabilities/: default.json  updater.template.json
desktop-bridge-native/src-tauri/icons/: README.md
desktop-bridge-native/src-tauri/src/: healthcheck.rs  lib.rs  main.rs  pairing.rs  redact.rs  supervisor.rs
desktop-bridge-native/ui/: app.js  index.html  styles.css
desktop-bridge/src/: audit.js  auth.js  config.js  emergency.js  files.js  index.js  jobs.js  launch.js  localai.js  paths.js  protocol.js  rateLimit.js  server.js  system.js  urlCheck.js
desktop-bridge/tests/: backup.test.js  bridge-status-store.test.js  bridge-status-ui.test.js  capability.test.js  chronicle-week.test.js  chronicle.test.js  command-palette.test.js  continue-project.test.js  (+46 more)
docs/: code-signing.md  desktop-bridge-windows-build.md  release-signing.md
public/: manifest.webmanifest
scripts/: build-bridge-package.mjs  build-release-manifest.mjs  build-updater-manifest.mjs  release-preflight.mjs
src/: routeTree.gen.ts  styles.css
(+153 files in other folders)
