[package]
name = "rah-desktop-bridge-native"
version = "0.2.1"
description = "RAH Desktop Bridge — Windows tray companion"
authors = ["RAH AI Studios"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
ureq = { version = "2", default-features = false, features = ["json"] }

[lib]
name = "rah_desktop_bridge_native"
path = "src/lib.rs"

[[bin]]
name = "rah-desktop-bridge-native"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"